[package]
name = "unbox"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
zip = "0.5.0"
failure = "0.1.3"
indicatif = "0.11.0"
tree_magic = { version = "0.2.1", features = ["staticmime"] }
uuid = { version = "0.7.1", features = ["v4"] }
regex = "1.1.0"
lazy_static = "1.2.0"
tar = "0.4.20"
console = "0.7.2"
libflate = "0.1.19"
xz2 = "0.1.6"
