[package]
name = "unpack"
version = "0.2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"
license = "MIT"
description = "Command line utility that unpacks archives, a maintained version of 'unbox'."
readme = "README.md"
repository = "https://github.com/Byron/unpack"
homepage = "https://github.com/Byron/unpack"
documentation = "https://github.com/Byron/unpack"

[dependencies]
clap = "2.32.0"
zip = "0.5.0"
failure = "0.1.3"
indicatif = "0.11.0"
tree_magic = { version = "0.2.1", features = ["staticmime"] }
uuid = { version = "0.7.1", features = ["v4"] }
regex = "1.1.0"
lazy_static = "1.2.0"
tar = "0.4.20"
console = "0.7.2"
libflate = "0.1.19"
xz2 = "0.1.6"
bzip2 = "0.3.3"
petgraph = "0.5.1"
strum = "0.13.0"
strum_macros = "0.13.0"
ar = "0.6.2"
cab = "0.2.0"
memmap = "0.7.0"
owning_ref = "0.4.0"
stable_deref_trait = "1.1.1"
goblin = { version = "0.0.19", features = ["pe32", "pe64", "std"], default_features = false }
